# distributed_visual_slam_frontend

./: package.xml
distributed_loop_closure_detection/: CMakeLists.txt  package.xml
loop_closure_detection/: CMakeLists.txt  package.xml
loop_closure_transform/: CMakeLists.txt  package.xml
loop_closure_transform/include/loop_closure_transform/: MsgConversion.h  Registration.h  RegistrationVis.h  communication.h  factorGraph.h  logger.h  myRegistration.h  myRegistrationVis.h  stereoCamGeometricTools.h  stereo_cam_geometric_tools.h  stereo_images_synchronizer.h
loop_closure_transform/include/rtflann/: readme.txt
loop_closure_transform/launch/: test.launch  test_realsense_bag.launch
loop_closure_transform/msg/: EstTransform.msg  EstimatedTransform.msg  StereoExtractResult.msg  StereoImagePair.msg  StereoMatch.msg
loop_closure_transform/src/: MsgConversion.cpp  Registration.cpp  RegistrationVis.cpp  communication.cpp  factorGraph.cpp  logger.cpp  loop_closure_transform_node.cpp  myRegistration.cpp  myRegistrationVis.cpp  stereoCamGeometricTools.cpp  stereo_cam_geometric_tools.cpp
loop_closure_transform/srv/: ReceiveLoopClosures.srv
